--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bm-js/icons": "^1.0.31",
+    "@hellberg/react-svg-icons": "^1.1.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
